--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
+    "framer-motion": "^7.6.14",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
