--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^7.6.14",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -26,6 +27,7 @@
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
