--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-tooltip": "^5.0.0",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
